# 3D-Scanning

./: .gitignore  README.md  team_members.txt
exercise_0/cmake-tutorial/: CMakeLists.txt  constants.h  main.cpp  output.txt  util.h
exercise_0/cmake-tutorial/lib/: algo.cpp  algo.h
exercise_1/: team_members.txt
exercise_1/exercise_1_src/: CMakeLists.txt  exercise_01  exercise_01.cbp  main.cpp  off_sample.off
exercise_2/: team_members.txt
exercise_2/exercise_2_src/: CMakeLists.txt  ImplicitSurface.h  MarchingCubes.h  main.cpp
exercise_2/exercise_2_src/exercise_2_src/: CMakeLists.txt  ImplicitSurface.h  MarchingCubes.h  main.cpp
exercise_2/mesh-results/: hoppe.off  rbf.off  sphere.off  torus.off
exercise_2/results/: rbf.off  sphere.off  torus.off
exercise_3/: README.md
exercise_3/exercise_3_src/: CMakeLists.txt  ProcrustesAligner.h  SimpleMesh.h  main.cpp
exercise_3/results/: bunny_procrustes.off
exercise_4/data/: points_dragon_1.txt  points_dragon_2.txt  points_gaussian.txt  points_surface.txt  weights_dragon.txt
exercise_4/exercise_4_src/: CMakeLists.txt  dragon.cpp  gaussian.cpp  plot_dragon.py  plot_gaussian.py  plot_surface.py  surface.cpp
exercise_4/output/: output_dragon.txt  output_gaussian.txt  output_gaussian_convergence.txt  output_surface.txt
exercise_4/outputs/: gaussian_output.txt  output_dragon.txt  output_surface.txt
exercise_5/exercise_05_src/: CMakeLists.txt  ICPOptimizer.h  main.cpp
exercise_5/exercise_05_src/libs/Flann/flann/: flann.hpp
exercise_5/exercise_05_src/libs/Flann/flann/algorithms/: center_chooser.h  dist.h  hierarchical_clustering_index.h  kmeans_index.h  lsh_index.h
exercise_5/exercise_05_src/libs/Flann/flann/nn/: ground_truth.h
exercise_5/exercise_05_src/libs/Flann/flann/util/: any.h  lsh_table.h  random.h  serialization.h
exercise_5/exercise_05_src/libs/Flann/flann/util/cuda/: heap.h  result_set.h
exercise_5/outputs/: bunny_icp.off  bunny_icp_linear.off  bunny_icp_point.off
exercise_5/results/: bunny_icp_linear.off  bunny_icp_point.off
